# traceflow-lite

./: .gitignore  Makefile  README.md  client.py  pyproject.toml  requirements.txt  state.py  tf_types.py  traceflow.db
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
Architecture/: architecture-box.md  architecture-sequence.md  diagram.md  traceflow_workflow.md
docs/adr/: 0001-use-sqlite-with-wal-mode.md  0002-langgraph-for-agent-orchestration.md  0003-provider-abstraction-pattern.md  0004-llm-response-caching.md  0005-evaluation-gate-pattern.md  0006-streamlit-for-ui.md  README.md  template.md
graph_flow/: graph.py
graph_flow/nodes/: node_prompts.py  nodes.py
persistence/: sqlite.py  trace_store.py
providers/: __init__.py  anthropic_provider.py  base.py  cache.py  cache_provider.py  cost.py  openai_provider.py  retry.py  router.py
tests/: conftest.py  test_cache.py  test_client.py  test_client_mock.py  test_persistence.py  test_retriever.py  test_revision.py  test_steps.py  test_unit.py
ui/: README.md  app.py
utils/: retriever_utils.py  vector_types.py
